# XC-UE

./: .cursorignore  .gitignore  0001_第一章 天黑别出门.txt  INDEX.md  README_XC-UE_当前结构与真源边界.md  XC-UE_全量深度盘查报告_2026-06-27.md  XC-UE_项目说明与资源边界.md  pyproject.toml  依赖锁定_开发运行.txt  烟雨楼_第1至2章_清洗版.txt  第1章-准点下班怎么了.md  第1章_准点下班怎么了_商业修订版.md  项目索引.md
.git_旧目录_无有效提交/: COMMIT_EDITMSG  config  index
00_工程总控/: CLEANUP_LOG_L2_prebuild.md  CURRENT_SYSTEM_STATUS.generated.md  CURRENT_SYSTEM_STATUS.md  DIRECTORY_GOVERNANCE_TASKS.md  DIRECTORY_GOVERNANCE_v1.md  SOURCE_POLICY_外部资料接入规则.md  STRUCTURE_CHECK_v1.md  云盘副本登记表.md  外部材料接入规则.md  当前工程唯一真源.md  当前系统状态_自动生成.md  目录治理任务.md  目录治理规范_v1.md  目录结构检查_v1.md  运行记录管理规则.md
10_L0_总图层/: L0_XC-UE_终极工程总图.md
20_L1_闸门层/: L1-00_闸门接口表.md  L1-01_五大创作问题_技术护栏闭环图.md  L1-02_读者投入意愿工程图.md  L1-03_发布锁验收工程图.md
30_L1.5_路由矩阵层/: L1.5_Routing_Matrix.md  L1.5_路由规则.json
40_L2_正式能力层/: L2-00_正式能力层定义_v0.2.md  L2-01_叙事结构能力_v0.3.1_边界修正版.md  L2-02_文风语言能力_v0.3_真源绑定版.md  L2-03_角色心理能力_v0.1.1_自检修正版.md  L2-04_创意设定能力_v0.2_根部结构图绑定版.md  L2-05_市场体验能力_v0.1.1_自检修正版.md  L2-06_系统一致性与状态管理能力_v0.3.1_技术根修正版.md  L2-99_能力层接口总表_v0.1.1_自检修正版.md  L2_输入与证据上下文边界.md
50_L3_执行协议层/: L3-00_执行协议总表_v0.1.2.md  L3-01_Cursor文件操作协议_v0.1.2.md  L3-02_正文生成与改写任务协议_v0.1.2.md  L3-03_验收回填协议_v0.1.2.md  L3-04_版本与回滚协议_v0.1.2.md  L3-05_日志记录协议_v0.1.2.md  L3-06_IR输入映射协议_v0.1.2.md  L3-07_ProjectHarness运行协议_v0.1.2.md  L3-99_执行禁止项_v0.1.2.md  README_L3_v0.1.2_修正说明.md
70_测试项目/: README.md
90_日志/: L1-L1.5_当前系统失败断点记录.md  L1_当前系统闸门失败断点记录_v0.1.md
scripts/: eval_l1_semantic_golden.py  eval_l2_real_api_pilot.py  修改说明.txt  (+3 more)
(+2259 files in other folders)
